# useless

./: .gitignore  CMakeLists.txt  config.cpp  config.h  first_project.pro  main.cpp  main.qml  mintty.exe.stackdump  useless.cpp  useless.h  useless.ui  uselesspr.rp  uselessui.qrc
qml/: AudioPlayer.cpp  AudioPlayer.h  Donate.qml  Light.qml  Pay.qml  Pray.qml  audioplayer.cpp  audioplayer.h  config.cpp  config.h  pay.cpp  pay.h
resources/File/: 金刚经.txt
